# sources

./: index.json  index.min.json
.github/workflows/: build.yaml
sources/: multi.ehentai-v6.aix  zh.zerobywns-v10.aix  zh.zerobywns-v16.aix
sources/en.comix/src/: lib.rs  web.rs
sources/en.dankefurslesen/: Cargo.toml
sources/en.dankefurslesen/res/: filters.json  source.json
sources/en.dankefurslesen/src/: lib.rs
sources/en.freewebnovel/res/: source.json
sources/en.freewebnovel/src/: helpers.rs  lib.rs
sources/en.guya/: Cargo.toml
sources/en.guya/res/: source.json
sources/en.guya/src/: lib.rs
sources/en.novelbuddy/res/: filters.json  settings.json  source.json
sources/en.novelbuddy/src/: helpers.rs  lib.rs  settings.rs
sources/multi.ehentai/res/: filters.json  source.json
sources/multi.ehentai/src/: lib.rs  models.rs
sources/multi.kagane/: Cargo.toml
sources/multi.kagane/res/: filters.json  settings.json  source.json
sources/multi.kagane/src/: helpers.rs  lib.rs  models.rs
sources/multi.mangafire/: Cargo.toml
sources/multi.mangafire/res/: filters.json  source.json
sources/multi.mangafire/src/: helpers.rs  home.rs  lib.rs  models.rs  settings.rs
sources/multi.suwayomi/: Cargo.toml
sources/multi.suwayomi/res/: settings.json  source.json
sources/multi.suwayomi/src/: lib.rs  settings.rs
sources/zh.copymanga/res/: source.json
sources/zh.happymh/: Cargo.toml
sources/zh.happymh/res/: source.json
sources/zh.happymh/src/json/: page_list.rs
sources/zh.xiurenai/: Cargo.toml
sources/zh.xiurenai/res/: filters.json  source.json
sources/zh.xiurenai/src/: lib.rs
sources/zh.zerobyw/: Cargo.toml
sources/zh.zerobyw/res/: filters.json  settings.json  source.json
sources/zh.zerobyw/src/: html.rs  lib.rs  net.rs
sources/zh.zerobywns/: Cargo.toml
sources/zh.zerobywns/.cargo/: config.toml
sources/zh.zerobywns/res/: filters.json  settings.json  source.json
sources/zh.zerobywns/src/: helper.rs  lib.rs
templates/guya/: Cargo.toml
templates/guya/src/: helpers.rs  imp.rs  lib.rs  models.rs
